--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,45 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+    		<groupId>org.springframework.boot</groupId>
+    		<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+
+		<dependency>
+        	<groupId>org.springframework.boot</groupId>
+        	<artifactId>spring-boot-starter-webflux</artifactId>
+    	</dependency>
+
+		<dependency>
+    		<groupId>io.github.cdimascio</groupId>
+    		<artifactId>dotenv-java</artifactId>
+    		<version>3.0.0</version>
+		</dependency>
+
+		<dependency>
+    		<groupId>io.netty</groupId>
+    		<artifactId>netty-resolver-dns-native-macos</artifactId>
+    		<version>4.1.86.Final</version>   
+    		<classifier>osx-aarch_64</classifier>
+		</dependency>
+
 	</dependencies>
 
 	<build>
